real-project/openvino/test-lambda/classification_results/non_compilable/test_30.cpp.log
/home/anonymous/compare-order/real-project/openvino/test-lambda/test_30.cpp:13:16: error: no matching member function for call to 'meta'
   13 |         return meta(a).get<detail::CreateIdx>().m_idx < meta(b).get<detail::CreateIdx>().m_idx;
      |                ^~~~
/home/anonymous/compare-order/real-project/openvino/test-lambda/test_30.cpp:47:38: note: candidate template ignored: couldn't infer template argument 'T'
   47 |     template<typename T> MetaType<T> meta(const own::ade::NodeHandle&) const { return {}; }
      |                                      ^
/home/anonymous/compare-order/real-project/openvino/test-lambda/test_30.cpp:13:57: error: no matching member function for call to 'meta'
   13 |         return meta(a).get<detail::CreateIdx>().m_idx < meta(b).get<detail::CreateIdx>().m_idx;
      |                                                         ^~~~
/home/anonymous/compare-order/real-project/openvino/test-lambda/test_30.cpp:47:38: note: candidate template ignored: couldn't infer template argument 'T'
   47 |     template<typename T> MetaType<T> meta(const own::ade::NodeHandle&) const { return {}; }
      |                                      ^
2 errors generated.
